# skrvm

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  release-please-config.json  vite.config.ts
.antigravitycli/: afde3071-c424-49fe-bc12-67c1f13a01b1.json  ed2010c0-1621-4f24-8033-655a74e9c250.json
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  pr-title-lint.yml  release.yml
docs/: README.md  astro.config.mjs  pnpm-lock.yaml
docs/src/content/docs/: custom.css  index.mdx
docs/src/content/docs/guides/: architecture.md  configuration.md  developer-guide.md  getting-started.md  integrations.md  operator-guide.md  protocol.md
examples/: WORKFLOW.github.md  WORKFLOW.gitlab.md  WORKFLOW.jira.md  WORKFLOW.linear.md  WORKFLOW.memory.md  WORKFLOW.template.md
src/: App.test.tsx  App.tsx  Dashboard.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_runner.rs  config.rs  lib.rs  main.rs  orchestrator.rs  path_safety.rs  tracker.rs  workflow.rs
